--- a/assets/css/style/style.css
+++ b/assets/css/style/style.css
@@ -483,7 +483,7 @@ p.content__hotel--seeall:hover{
    background-position-y: -38px;
    border-radius: 20px;
    opacity: 0.9;
-   background-image: url(https://cf.bstatic.com/xdata/images/hotel/max1280x900/356423455.jpg?k=80b00ca7235bf8bc00bdcdc15dcd1369629052cf7b59addb9b1f06821f51d56b&o=&hp=1);
+   background-image: url(https://pix10.agoda.net/hotelImages/16209810/-1/821b0bc30241a1822eef4ed53cb6fa19.jpg?ca=29&ce=0&s=1024x768);
 }
 .content__hotel .content__hotel--list--row .hotel-solution5{
    background-repeat: no-repeat;
